# PicoInterface

./: .gitignore  CMakeLists.txt
ICCommDevice/: CMakeLists.txt  ICCommMasterDevice.c
PicoInterfaceSample/: CMakeLists.txt  PicoInterfaceSample.c
PicoSSD1306Device/: CMakeLists.txt  DisplayDevice.c  DisplayProtocol.h
src/devices/picoSPIComm/: SPIICComm.c
src/devices/ssd1306/: ssd1306_driver.c  ssd1306_font.h  ssd1306_font_sarasa.h
src/interface/: Display.h  ICComm.h
tools/fontgen/: build.sh
tools/fontgen/src/: main.c
